--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,22 +1,17 @@
 #wrapper {
   display: flex;
-  overflow: hidden; /* will contain if #first is longer than #second */
+  //overflow: hidden; /* will contain if #first is longer than #second */
 }
 #assignments {
-  float:left; /* add this */
+  flex: 1;
+  //float:left; /* add this */
 }
 #results {
-  overflow: hidden; /* if you don't want #second to wrap below #first */
+  width: 500px;
+  //float:right; /* if you don't want #second to wrap below #first */
 }
 
-#vzor {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  line-height: 24px;
-  margin-right: 0;
-  padding-bottom: 50px;
-}
+
 
 footer {
   display: flex;
