--- a/src/app/assignment/assignment.component.scss
+++ b/src/app/assignment/assignment.component.scss
@@ -2,7 +2,6 @@
   min-height: 40px;
   display: flex;
 
-  justify-content: center;
   align-items: center;
   line-height: 24px;
 }
@@ -11,7 +10,6 @@
   min-height: 40px;
   display: flex;
 
-  justify-content: center;
   align-items: center;
   line-height: 24px;
 }
@@ -19,10 +17,9 @@
   min-height: 40px;
   display: flex;
 
-  justify-content: center;
   align-items: center;
   line-height: 24px;
-  padding: 0 100px 0 200px;
+  padding: 0 0 0 200px;
 }
 
 .card.card-small {
