--- a/src/app/result-list/result-list.component.html
+++ b/src/app/result-list/result-list.component.html
@@ -1,3 +1,4 @@
 <div class="card-container">
-  <app-result *ngFor="let result of results" [result]="result"></app-result>
+  <app-result *ngFor="let subtest of subtests; let i = index" [subtest]="subtest" (resultChange)="updateSubtestResults($event, i)"></app-result>
 </div>
+
