--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -11,8 +11,23 @@
   //float:right; /* if you don't want #second to wrap below #first */
 }
 
+.content{
+  text-align:center;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  /* bring your own prefixes */
+  transform: translate(-50%, -50%);
+}
+
+.center{
+  margin: 0 auto;
+  display: block;
+}
 
 
 footer {
+  text-align: center;
   display: flex;
 }
+
