--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,10 @@
 #wrapper {
   display: flex;
-  //overflow: hidden; /* will contain if #first is longer than #second */
+  margin: 50px 10px 10px 10px;
+  padding: 10px;
+  border: solid 2px #1976d2;
+  text-align:center;
+  /* bring your own prefixes */
 }
 #assignments {
   flex: 1;
@@ -11,7 +15,7 @@
   //float:right; /* if you don't want #second to wrap below #first */
 }
 
-.content{
+.intro_content{
   text-align:center;
   position: fixed;
   top: 50%;
@@ -24,7 +28,6 @@
   margin: 0 auto;
   display: block;
 }
-
 
 footer {
   text-align: center;
