--- a/src/app/assignment-list/assignment-list.component.html
+++ b/src/app/assignment-list/assignment-list.component.html
@@ -1,4 +1,7 @@
 <div class="card-container">
-  <app-assignment *ngFor="let assignment of assignments" [assignment]="assignment">
+  <app-assignment
+    *ngFor="let assignment of assignments" [assignment]="assignment"
+    (assignmentOpened)="assignmentOpened.emit($event)"
+  >
   </app-assignment>
 </div>
