--- a/src/app/assignment/assignment.component.html
+++ b/src/app/assignment/assignment.component.html
@@ -1,6 +1,6 @@
 <div class="card card-small" (click)="changeState()" [@widthGrow]="state">
     <div *ngIf="state === 'closed'; else arc">
-      <button mat-raised-button color="primary" style="margin-top: 10px;">Open TEST - {{assignment.id}}</button>
+      <button mat-raised-button color="primary" style="margin-top: 1px;">Open TEST - {{assignment.id}} - {{assignment.type}}</button>
     </div>
 
     <ng-template #arc>
