--- a/src/app/result/result.component.html
+++ b/src/app/result/result.component.html
@@ -1,4 +1,4 @@
-<div class="card card-small">
+<div class="card card-small" *ngIf="result">
   <app-arc-item [subtest]="result" (emitResults)="updateResults($event)"></app-arc-item>
 </div>
 
