--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -174,6 +174,7 @@
   <!--TODO - just for me -remove after testing-->
   <span>Kompozitní testování {{currentTest?.test_id}}</span>
   <div class="spacer"></div>
+  <button mat-button (click)="endTheSet()"> Zrušit </button>
 </div>
 
 <div role="main">
@@ -208,10 +209,6 @@
       <div *ngIf="score" style="font-size: 50px">
         <pre>{{score + "/"  + maximalScore}}</pre>
       </div>
-      <!--    <video autoplay loop>
-            <source src="assets/video.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-          </video>-->
       <div *ngIf="!score">
         <mat-form-field appearance="fill" >
           <mat-label>Jméno:</mat-label>
@@ -222,10 +219,11 @@
           <mat-label>Výsledek prvního testu:</mat-label>
           <input matInput name="iq" type="number" placeholder="110" [(ngModel)]="iq" required>
         </mat-form-field>
-      </div>
-      <iframe width="1240" height="720" src="assets/video.mp4" frameborder="0" allowfullscreen allow='autoplay'></iframe>
 
-      <button class="center" mat-raised-button color="primary" (click)="startTheTest()" [disabled]="!name || !iq">Začít test</button>
+        <iframe width="1258" height="536" src="assets/video.mp4" frameborder="0" allowfullscreen allow='autoplay'></iframe>
+        <button class="center" mat-raised-button color="primary" (click)="startTheTest()" [disabled]="!name || !iq">Začít test</button>
+      </div>
+
     </div>
   </ng-template>
 
